--- a/schedule-app/src/app/student/student-term-info/student-course-info/student-course-info.component.html
+++ b/schedule-app/src/app/student/student-term-info/student-course-info/student-course-info.component.html
@@ -1,3 +1,24 @@
-<p>
-  student-course-info works!
-</p>
+<mat-card>
+  <mat-card-content>
+    <div class="table-responsive mt-2">
+      <table class="table">
+        <thead>
+          <tr class="headers">
+            <th>Course</th>
+            <th>Description</th>
+            <th>Instructor</th>
+            <th>Credit</th>
+            <th>Term Schedule</th>
+          </tr>
+          <tr *ngFor="let course of student.courses">
+            <th><a href="">{{course.name}}</a></th>
+            <th>{{course.description}}</th>
+            <th><a href="">{{course.instructor}}</a></th>
+            <th>{{course.creditHours}}</th>
+            <th>{{course.meetTimes}}</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </mat-card-content>
+</mat-card>
