--- a/schedule-app/src/app/student/student-term-info/student-term-info.component.html
+++ b/schedule-app/src/app/student/student-term-info/student-term-info.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let student of student">
+<div *ngFor="let student of student" class="container">
   <div class="row">
     <div class="col-md-12">
       <div class="terms" fxLayout="row" fxLayoutAlign="space-around center">
@@ -12,10 +12,10 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <app-student-info [student]="student"></app-student-info>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-9">
       <app-student-course-info [student]="student"></app-student-course-info>
     </div>
   </div>
