--- a/schedule-app/src/styles.css
+++ b/schedule-app/src/styles.css
@@ -2,6 +2,5 @@
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 body {
-    margin: 0;
-    font-family: Roboto, Arial, sans-serif; 
+    background-color: #eee;
 }
