Created empty scheulde to update based on class info for the term

--- a/schedule-app/src/app/student/student-term-info/student-course-info/student-course-info.component.css
+++ b/schedule-app/src/app/student/student-term-info/student-course-info/student-course-info.component.css
@@ -1,11 +1,3 @@
-/* tr:nth-child(even) {
-    background-color: #fff;
-}
-
-tr:nth-child(odd) {
-    background-color: #eee;
-} */
-
 tr.headers {
-    background-color: #ddd;
+    background-color: #dee2e6;
 }
