--- a/schedule-app/src/styles.css
+++ b/schedule-app/src/styles.css
@@ -4,3 +4,13 @@
 body {
     background-color: #eee;
 }
+
+.row {
+    margin: 15px;
+}
+
+@media (min-width: 1400px) {
+    .container {
+      max-width: 1340px;
+    }
+  }
