Need a better way to come up with how to show the schedule content

--- a/schedule-app/src/app/student/student-term-info/student-info/student-info.component.html
+++ b/schedule-app/src/app/student/student-term-info/student-info/student-info.component.html
@@ -4,6 +4,6 @@
     <p>Username: {{student.username}}</p>
     <p>Major: {{student.majors}}</p>
     <p>Year: Y{{student.year}}</p>
-    <p>Adviser: <a href="">???</a></p>
+    <p>Adviser: <a href="">{{student.advisor[0].username}}</a></p>
   </mat-card-content>
 </mat-card>
