Schedule is now updating properly

--- a/schedule-app/src/app/student/student-term-info/student-info/student-info.component.html
+++ b/schedule-app/src/app/student/student-term-info/student-info/student-info.component.html
@@ -3,6 +3,7 @@
   <mat-card-content>
     <p>Username: {{student.username}}</p>
     <p>Major: {{student.majors}}</p>
+    <p *ngIf="student.minors.length > 0">Minor: {{student.minors}}</p>
     <p>Year: Y{{student.year}}</p>
     <p>Adviser: <a href="">{{student.advisor[0].username}}</a></p>
   </mat-card-content>
