--- a/schedule-app/src/app/student/student-term-info/student-term-info.component.html
+++ b/schedule-app/src/app/student/student-term-info/student-term-info.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <app-student-schedule [student]="student" [username]="username" [term]="term"></app-student-schedule>
+      <app-student-schedule [student]="student" [days]="days" [hours]="hours" [schedule]="schedule"></app-student-schedule>
     </div>
   </div>
 </div>
