--- a/schedule-app/src/app/student/student-term-info/student-schedule/student-schedule.component.html
+++ b/schedule-app/src/app/student/student-term-info/student-schedule/student-schedule.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf="isStudent(student);">
+<mat-card>
   <mat-card-content>
     <table class="table">
       <thead>
@@ -18,7 +18,7 @@
         <tr *ngFor="let day of days">
           <th class="day">{{day}}</th>
           <th *ngFor="let hour of hours">
-
+            <p *ngIf="getValue(day, hour);">{{curVal}}</p>
           </th>
         </tr>
       </thead>
