--- a/schedule-app/src/app/student/student-term-info/student-schedule/student-schedule.component.css
+++ b/schedule-app/src/app/student/student-term-info/student-schedule/student-schedule.component.css
@@ -5,3 +5,9 @@
 .day {
     background-color: #dee2e6;
 }
+
+.table thead th {
+    vertical-align: middle;
+    text-align: center;
+    width: 300px;
+}
