Faculty courses displayed properly

--- a/schedule-app/src/app/faculty/faculty-term-info/faculty-term-info.component.html
+++ b/schedule-app/src/app/faculty/faculty-term-info/faculty-term-info.component.html
@@ -16,7 +16,7 @@
       <app-faculty-info [faculty]="faculty"></app-faculty-info>
     </div>
     <div class="col-md-9">
-      <!-- <app-student-course-info [student]="student"></app-student-course-info> -->
+      <app-faculty-course-info [faculty]="faculty"></app-faculty-course-info>
     </div>
   </div>
   <div class="row">
