--- a/schedule-app/src/app/faculty/faculty-term-info/faculty-course-info/faculty-course-info.component.html
+++ b/schedule-app/src/app/faculty/faculty-term-info/faculty-course-info/faculty-course-info.component.html
@@ -1,3 +1,26 @@
-<p>
-  factulty-course-info works!
-</p>
+<mat-card>
+  <mat-card-content>
+    <table class="table">
+      <thead>
+        <tr class="headers">
+          <th>Course</th>
+          <th>Description</th>
+          <th>Instructor</th>
+          <th>Credit</th>
+          <th>Term Schedule</th>
+        </tr>
+        <tr *ngFor="let course of faculty.courses">
+          <th>
+            <a (click)="openCourseTermInfo(course);">{{course.name}}</a>
+          </th>
+          <th>{{course.description}}</th>
+          <th>
+            {{faculty.username}}
+          </th>
+          <th>{{course.creditHours}}</th>
+          <th>{{course.filteredTimes}}</th>
+        </tr>
+      </thead>
+    </table>
+  </mat-card-content>
+</mat-card>
