--- a/schedule-app/src/app/faculty/faculty-term-info/faculty-term-info.component.html
+++ b/schedule-app/src/app/faculty/faculty-term-info/faculty-term-info.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <!-- <app-student-schedule [student]="student" [days]="days" [hours]="hours" [schedule]="schedule"></app-student-schedule> -->
+      <app-faculty-schedule [schedule]="schedule"></app-faculty-schedule>
     </div>
   </div>
 </div>
