--- a/schedule-app/src/app/faculty/faculty-term-info/faculty-term-info.component.html
+++ b/schedule-app/src/app/faculty/faculty-term-info/faculty-term-info.component.html
@@ -24,4 +24,9 @@
       <app-faculty-schedule [schedule]="schedule"></app-faculty-schedule>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <app-faculty-advisees [faculty]="faculty"></app-faculty-advisees>
+    </div>
+  </div>
 </div>
