Added ability for faculty to show or hide their advisees

--- a/schedule-app/src/app/faculty/faculty-term-info/faculty-advisees/faculty-advisees.component.html
+++ b/schedule-app/src/app/faculty/faculty-term-info/faculty-advisees/faculty-advisees.component.html
@@ -1,23 +1,32 @@
-<mat-card>
-  <mat-card-title>Advisees</mat-card-title>
-  <mat-card-content>
-    <table class="table">
-      <tr class="headers">
-        <th>Username</th>
-        <th>Name</th>
-        <th>Major</th>
-        <th>Year</th>
-        <th>Email</th>
-      </tr>
-      <tr *ngFor="let advisee of faculty.advisees">
-        <th>
-          <a (click)="openStudentTermInfo(advisee);">{{advisee.username}}</a>
-        </th>
-        <th>{{advisee.name}}</th>
-        <th>{{advisee.majors}}</th>
-        <th>Y{{advisee.year}}</th>
-        <th>{{advisee.username}}@rose-hulman.edu</th>
-      </tr>
-    </table>
-  </mat-card-content>
-</mat-card>
+<mat-accordion>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Advisees
+      </mat-panel-title>
+      <mat-panel-description>
+        Show or hide the list of advisees
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <mat-card-content>
+      <table class="table">
+        <tr class="headers">
+          <th>Username</th>
+          <th>Name</th>
+          <th>Major</th>
+          <th>Year</th>
+          <th>Email</th>
+        </tr>
+        <tr *ngFor="let advisee of faculty.advisees">
+          <th>
+            <a (click)="openStudentTermInfo(advisee);">{{advisee.username}}</a>
+          </th>
+          <th>{{advisee.name}}</th>
+          <th>{{advisee.majors}}</th>
+          <th>Y{{advisee.year}}</th>
+          <th>{{advisee.username}}@rose-hulman.edu</th>
+        </tr>
+      </table>
+    </mat-card-content>
+  </mat-expansion-panel>
+</mat-accordion>
