--- a/schedule-app/src/app/student/student-term-info/student-info/student-info.component.html
+++ b/schedule-app/src/app/student/student-term-info/student-info/student-info.component.html
@@ -2,8 +2,8 @@
   <mat-card-title>{{student.name}}</mat-card-title>
   <mat-card-content>
     <p>Username: {{student.username}}</p>
-    <p>Major: {{student.majors}}</p>
-    <p *ngIf="student.minors.length > 0">Minor: {{student.minors}}</p>
+    <p *ngIf="student.majors != ''">Major: {{student.majors}}</p>
+    <p *ngIf="student.minors != ''">Minor: {{student.minors}}</p>
     <p>Year: Y{{student.year}}</p>
     <p *ngIf="student.advisor != ''">Adviser: <a href="">{{student.advisor}}</a></p>
   </mat-card-content>
