Hide advisee component if the faculty doesn't have any advisees

--- a/schedule-app/src/app/faculty/faculty-term-info/faculty-advisees/faculty-advisees.component.html
+++ b/schedule-app/src/app/faculty/faculty-term-info/faculty-advisees/faculty-advisees.component.html
@@ -1,4 +1,4 @@
-<mat-accordion>
+<mat-accordion *ngIf="faculty.advisees.length > 0">
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
