Fixed issue where dept for faculty wasn't showing

--- a/schedule-app/src/app/faculty/faculty-term-info/faculty-info/faculty-info.component.html
+++ b/schedule-app/src/app/faculty/faculty-term-info/faculty-info/faculty-info.component.html
@@ -2,6 +2,6 @@
   <mat-card-title>{{faculty.name}}</mat-card-title>
   <mat-card-content>
     <p>Username: {{faculty.username}}</p>
-    <p *ngIf="faculty.dept != ''">Dept: {{faculty.advisor}}</p>
+    <p *ngIf="faculty.dept != ''">Dept: {{faculty.dept}}</p>
   </mat-card-content>
 </mat-card>
