--- a/schedule-app/src/app/student/student-term-info/student-term-info.component.html
+++ b/schedule-app/src/app/student/student-term-info/student-term-info.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="row">
     <div class="col-md-3">
-      <app-student-info [student]="student"></app-student-info>
+      <app-student-term-information [student]="student"></app-student-term-information>
     </div>
     <div class="col-md-9">
       <app-student-course-info [student]="student"></app-student-course-info>
