--- a/schedule-app/src/app/student/student-term-info/student-term-information/student-term-information.component.html
+++ b/schedule-app/src/app/student/student-term-info/student-term-information/student-term-information.component.html
@@ -5,6 +5,6 @@
     <p *ngIf="student.majors !== ''">Major: {{student.majors}}</p>
     <p *ngIf="student.minors !== ''">Minor: {{student.minors}}</p>
     <p>Year: Y{{student.year}}</p>
-    <p *ngIf="student.advisor !== ''">Adviser: <a href="">{{student.advisor[0].username}}</a></p>
+    <p *ngIf="student.advisor !== ''">Adviser: <a href="">{{student.advisor}}</a></p>
   </mat-card-content>
 </mat-card>
