--- a/schedule-app/src/app/student/student-term-info/student-term-info.component.html
+++ b/schedule-app/src/app/student/student-term-info/student-term-info.component.html
@@ -2,10 +2,27 @@
   <div class="row">
     <div class="col-md-12">
       <div class="terms" fxLayout="row" fxLayoutAlign="space-around center">
-        <div *ngFor="let term of terms">
-          <button mat-raised-button *ngIf="term === student.term; else normalButton">{{term}}</button>
-          <ng-template #normalButton>
-            <button mat-button [routerLink]="['/student', student.username, term]">{{term}}</button>
+        <div>
+          <button mat-button *ngIf="previousTerm.term !== ''; else previous" [routerLink]="['/student', student.username, previousTerm.term]">
+            <mat-icon>keyboard_arrow_left</mat-icon> Previous Term
+          </button>
+          <ng-template #previous>
+            <button mat-button disabled>
+              <mat-icon>keyboard_arrow_left</mat-icon> Previous Term
+            </button>
+          </ng-template>
+        </div>
+        <button mat-raised-button color="accent">{{curTerm.name}}</button>
+        <div>
+          <button mat-button *ngIf="nextTerm.term !== ''; else next" [routerLink]="['/student', student.username, nextTerm.term]">
+            Next Term
+            <mat-icon>keyboard_arrow_right</mat-icon>
+          </button>
+          <ng-template #next>
+            <button mat-button disabled>
+              Next Term
+              <mat-icon>keyboard_arrow_right</mat-icon>
+            </button>
           </ng-template>
         </div>
       </div>
