Fixed styling issues

--- a/schedule-app/src/app/course-information/single-course-info/single-course-info.component.html
+++ b/schedule-app/src/app/course-information/single-course-info/single-course-info.component.html
@@ -45,6 +45,8 @@
         </mat-card-content>
       </mat-card>
     </div>
+  </div>
+  <div class="row">
     <div class="col-md-12">
       <app-course-student-info [students]="course.students"></app-course-student-info>
     </div>
