--- a/schedule-app/src/app/bad-request/bad-request.component.html
+++ b/schedule-app/src/app/bad-request/bad-request.component.html
@@ -8,5 +8,8 @@
           The page your are looking for does not exist, check to make sure you typed in the correct URL.
       </mat-card-subtitle>
     </mat-card-header>
+    <mat-card-actions style="margin-right:0;margin-left:0;">
+        <button mat-raised-button class="mat-primary" [routerLink]="''">Home</button>
+    </mat-card-actions>
   </mat-card>
 </div>
