--- a/schedule-app/src/styles.css
+++ b/schedule-app/src/styles.css
@@ -43,7 +43,7 @@ a:not([href]):not([tabindex]):focus {
 }
 
 .mat-toolbar.mat-primary {
-  margin-bottom: 50px;
+  margin-bottom: 15px;
 }
 
 input[type="text"]:not(textaarea) {
@@ -60,4 +60,13 @@ input[type="text"]:focus {
 input[type="text"]:focus {
   box-shadow: none;
   -webkit-box-shadow: none;
+}
+
+html,
+body,
+material-app,
+mat-sidenav-container {
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
