--- a/schedule-app/src/app/app.component.html
+++ b/schedule-app/src/app/app.component.html
@@ -14,11 +14,11 @@
     <button mat-icon-button *ngIf="authService.isSignedIn()" (click)="sidenav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    Schedule App
+    <h2>Schedule App</h2>
     <span fxFlex></span>
-    <button mat-button *ngIf="authService.isSignedIn(); else options">
+    <h2 *ngIf="authService.isSignedIn()">
       {{authService.getName()}}
-    </button>
+    </h2>
   </mat-toolbar>
   <router-outlet></router-outlet>
 </mat-sidenav-container>
