Fixed blue signout text

--- a/schedule-app/src/styles.css
+++ b/schedule-app/src/styles.css
@@ -70,3 +70,9 @@ mat-sidenav-container {
 button:focus {
   outline: none;
 }
+
+a:not([href]):not([tabindex]),
+a:not([href]):not([tabindex]):hover {
+  color: inherit;
+  text-decoration: none;
+}
