--- a/schedule-app/src/app/search/search.component.html
+++ b/schedule-app/src/app/search/search.component.html
@@ -5,15 +5,15 @@
         Search
       </mat-card-title>
       <mat-card-content>
-        <mat-form-field style="width:100%">
+        <mat-input-container>
           <input matInput placeholder="Username" type="text" formControlName="username">
           <mat-hint>
             <span [hidden]="searchForm.controls.username.valid || searchForm.controls.username.pristine">
               A username is required.
             </span>
           </mat-hint>
-        </mat-form-field>
-        <mat-input-container style="width:100%">
+        </mat-input-container>
+        <mat-input-container>
           <mat-select placeholder="Group" formControlName="group">
             <mat-option></mat-option>
             <mat-option *ngFor="let group of groups" [value]="group">
@@ -26,7 +26,7 @@
             </span>
           </mat-hint>
         </mat-input-container>
-        <mat-input-container style="width:100%">
+        <mat-input-container>
           <mat-select placeholder="Term" formControlName="term">
             <mat-option></mat-option>
             <mat-option *ngFor="let term of terms" [value]="term">
