--- a/schedule-app/src/styles.css
+++ b/schedule-app/src/styles.css
@@ -76,3 +76,12 @@ a:not([href]):not([tabindex]):hover {
   color: inherit;
   text-decoration: none;
 }
+
+.mat-input-container {
+  width: 100%;
+  display: block;
+}
+
+.spacer {
+  margin: 0 0 15px 0;
+}
