Moved some files around

--- a/schedule-app/src/app/app.component.html
+++ b/schedule-app/src/app/app.component.html
@@ -15,7 +15,7 @@
         <a mat-list-item (click)="sidenav.toggle()" [routerLink]="['/']">Home</a>
         <a mat-list-item (click)="sidenav.toggle()" [routerLink]="['/student', authService.getUsername()]">My Courses</a>
         <a mat-list-item (click)="sidenav.toggle()" [routerLink]="['/create-group']">Create a Group</a>
-        <a mat-list-item (click)="sidenav.toggle();authService.signOut();">Sign Out</a>
+        <a mat-list-item (click)="sidenav.toggle();authService.signOut();" style="color: inherit; text-decoration: none;">Sign Out</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
